# gitgud

./: .editorconfig  .gitattributes  .gitignore  CLAUDE.md  README.md  angular.json  angular.webpack.js  electron-builder.json  main.js  package-lock.json  package.json  playwright.config.ts  playwright.video.config.ts  preload.js  tsconfig.app.json  tsconfig.json  tsconfig.serve.json  tsconfig.spec.json  vitest.config.ts  wdio.conf.ts  wdio.demo.conf.ts  webpack.config.cjs  yolo6fds.txt
.history/: main_20240417160208.js
.run/: build_preview.run.xml  start.run.xml
angular-src/: .gitignore  angular.json  package-lock.json  package.json
app/: app-info.js  ipc-functions.js  ipc-functions.js.map  ipc-functions.ts  main.js  main.js.map  main.ts  package-lock.json  package.json  preload.ts  shell-pool.js  shell-pool.ts  splash.html  utils.js  utils.js.map  utils.ts
backend/: .gitignore  neutralino.config.json
docs/: index.html  show.webm
e2e/: diff-staging.spec.ts  git-ops.spec.ts  rebase-conflict.spec.ts  record.sh  search-merge.spec.ts  tsconfig.json  worktrees.spec.ts
electron-src/: ipc-functions.js  utils.js
frontend/: angular.json  package-lock.json  package.json
scripts/: preview.js  update-flatpak-manifest.py
src/: electron-api.ts  index.html  ipc-functions.js  main.ts  polyfills-test.ts  styles.scss  tsconfig.app.json  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  shell_pool.rs
src-tauri/src/commands/: fs.rs  mod.rs  process.rs  util.rs  watcher.rs
(+449 files in other folders)
